# xmile

./: Cargo.toml  REVIEW_ISSUES.md  test_all_feature_combinations.sh  test_all_features.sh  xmile-v1.0-os.html
.github/workflows/: test-features.yml
benches/: xml_parsing.rs
data/examples/: teacup.xmile
src/: lib.rs  namespace.rs  test_utils.rs  types.rs  validation_utils.rs
src/behavior/: mod.rs
src/containers/: graphical.rs  mod.rs
src/core/: identifiers.rs  mod.rs  namespace.rs  numeric_constants.rs  uid.rs  utils.rs
src/data/: mod.rs
src/dimensions/: mod.rs
src/equation/: expression.rs  identifier.rs  mod.rs  numeric.rs  parse.rs  units.rs  utils.rs
src/header/: mod.rs
src/macro/: mod.rs
src/model/: equations.rs  events.rs  groups.rs  mod.rs  object.rs  units.rs  variables.rs
src/model/gf/: data.rs  interpolation.rs  mod.rs  validation.rs  xml.rs
src/model/vars/: array.rs  aux.rs  flow.rs  gf.rs  mod.rs  module.rs  stock.rs
src/specs/: mod.rs
src/units/: mod.rs
src/view/: mod.rs  objects.rs  style.rs
src/xml/: errors.rs  mod.rs  schema.rs  serialize.rs  validation.rs
src/xml/deserialize/: behavior.rs  data.rs  dimensions.rs  graphical_functions.rs  header.rs  helpers.rs  macros.rs  mod.rs  specs.rs  style.rs  units.rs  variables.rs  views.rs
src/xml/quick/: de.rs  mod.rs  ser.rs
tests/: behavior_parsing.rs  comparison.rs  error_handling.rs  expression_parsing.rs  expression_verification.rs  graphical_functions.rs  macro_parsing.rs  module_parsing.rs  round_trip.rs  test_utils.rs  validation.rs  view_parsing.rs  xml_parsing.rs
