[package]
name = "xmile"
version = "0.1.0"
edition = "2024"

[dependencies]
# XML processing
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0" }

# Expression evaluation
pest = "2.7"        # For robust expression parsing
pest_derive = "2.7"

# Numerical computation
nalgebra = "0.32"  # For array operations
num-traits = "0.2"
rand = "0.8"       # For random functions

# Error handling
thiserror = "1.0"
anyhow = "1.0"
itertools = "0.14.0"
log = "0.4.27"
env_logger = "0.11.8"
unicode-normalization = "0.1.24"
feruca = "0.11.1"
icu = "1.4"
icu_casemap = "1.4"
icu_normalizer = "1.4"
icu_collator = "1.4"
serde-xml-rs = "0.8.1"


[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
pretty_assertions = "1.0"

[features]
default = ["basic"]
basic = []
arrays = []
conveyors = []
queues = []
submodels = []
macros = []
full = ["arrays", "conveyors", "queues", "submodels", "macros"]
# Optional features
